--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tanstack/react-query": "^5.4.3",
+    "@tanstack/react-query-devtools": "^5.4.3",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
     "concurrently": "^8.2.1",
     "cookie-parser": "^1.4.6",
+    "datauri": "^4.1.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.3",
     "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
@@ -32,6 +38,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "react-query": "^3.39.3",
     "react-toastify": "^9.1.3"
   }
 }
